# wclaytor.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index-original.html  index.html
scripts/github/issues-create-epic/: README.md  create-epic.py  epic-template.md  pyproject.toml  test-epic.md  testing.md
scripts/github/issues-create-epic/src/issues_create_epic/: __init__.py
scripts/github/issues-create-epic/tests/: test_create_epic.py
scripts/github/issues-sync/: README.md  issues-sync.py  pyproject.toml
scripts/github/issues-sync/src/issues_sync/: __init__.py  sync.py
scripts/github/issues-sync/tests/: test_sync.py
scripts/github/pull-requests-sync/: QUICK-REFERENCE.md  README.md  pull-requests-sync.py  pyproject.toml  test-sync.sh
scripts/github/pull-requests-sync/examples/: pr-template.md
scripts/github/pull-requests-sync/src/pull_requests_sync/: __init__.py  sync.py
scripts/github/pull-requests-sync/tests/: test_sync.py
scripts/utility/img/: README.md  pyproject.toml
scripts/utility/img/src/img_utils/: __init__.py  crop.py  optimize.py
tests/playwright/: README.md  TESTING_STRATEGY.md  TEST_ARCHITECTURE.md  TEST_PLAN.md  TEST_STATUS.md  conftest.py  pyproject.toml  run-accessibility.sh  run-all.sh  run-functional.sh  run-performance.sh  run-smoke.sh  run-visual.sh
tests/playwright/epics/: README.md  epic-smoke-tests.md
tests/playwright/fixtures/: __init__.py  test_data.py  urls.py
tests/playwright/pages/: __init__.py  base_page.py  home_page.py  projects_page.py  resume_page.py
tests/playwright/pages/components/: __init__.py  footer.py  navigation.py
tests/playwright/reports/20251224-191447/: report-analysis.md  report.html  report.xml
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testkeyboardnavigation-test-can-tab-to-nav-links-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testkeyboardnavigation-test-skip-link-exists-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationlinks-test-about-link-scrolls-to-section-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationlinks-test-brand-link-goes-home-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationlinks-test-contact-link-scrolls-to-section-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationlinks-test-projects-link-scrolls-to-section-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationlinks-test-resume-link-opens-resume-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationvisible-test-navigation-visible-on-page-chromium-homepage/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-critical-navigation-py-testnavigationvisible-test-navigation-visible-on-page-chromium-projects-projects-page/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-site-loads-py-testcriticalcontent-test-homepage-has-about-section-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-site-loads-py-testcriticalcontent-test-homepage-has-contact-section-chromium/: video.webm
tests/playwright/reports/20251224-191447/test-results/tests-smoke-test-site-loads-py-testcriticalcontent-test-homepage-has-name-chromium/: video.webm
tests/playwright/reports/20251224-202202/: report.html  report.xml
tests/playwright/reports/20251230-182527/: report.html  report.xml
tests/playwright/reports/20251230-182821/: report.html  report.xml
tests/playwright/reports/20251230-183648/: report.html  report.xml  test-output.txt
tests/playwright/tests/accessibility/: __init__.py
tests/playwright/tests/functional/: README.md  __init__.py  test_accessibility.py  test_cross_browser.py  test_homepage_about.py  test_homepage_contact.py  test_homepage_masthead.py  test_homepage_projects.py  test_navigation.py  test_projects_page.py  test_responsive.py
tests/playwright/tests/smoke/: README.md  __init__.py  test_critical_navigation.py  test_site_loads.py
tests/playwright/tests/visual/: __init__.py  test_visual_regression.py
tests/playwright/utilities/: README.md
tests/playwright/utilities/xml2md/: README.md  pyproject.toml
(+359 files in other folders)
