[project]
name = "issues-sync"
version = "0.1.0"
description = "Synchronize GitHub issues with local markdown documentation"
readme = "README.md"
authors = [
    { name = "wclaytor", email = "wclaytor@fastmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
issues-sync = "issues_sync.sync:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
